--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </head>
   <body>
     <main></main>
-    <script src="build/elm.js"></script>
+    <script src="build/main.js"></script>
     <script>
       const app = Elm.Main.init({
         node: document.querySelector("main"),
