--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>2D Block Attack Game</title>
     <style>
       body {
         background-color: #333;
@@ -35,7 +36,7 @@
   </head>
   <body>
     <main></main>
-    <script src="elm.js"></script>
+    <script src="build/main.js"></script>
     <script>
       const app = Elm.Main.init({
         node: document.querySelector("main"),
