--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>2D Box Attack</title>
+    <title>2D Block Attack Game</title>
     <style>
       body {
         background-color: #333;
